# ChurnShield

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
datasets/: Customer-Churn.csv
models/: churn_model_20250904_154231.pkl
notebooks/: analysis_notebook.ipynb
reports/: training_report_20250904_154231.json
src/: fast_api.py  gradio.py  logger_config.py
src/chatbot/: chatbot.py  chatbot_utils.py
src/churn_model/: churn_predictor.py  model_training.py
