[project]
name = "churnshield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "gradio>=5.44.1",
    "imblearn>=0.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
